synthesis, and morphing, developed by Kelly Fitz and Lippold Haken
at the CERL Sound Group. Loris includes a C++ class library, a
Python module, a C-linkable interface, and documentation.

Loris 1.5.3 is a minor upgrade to Loris 1.5.2, offering enhancements
to the Analyzer class and improved fundamental frequency estimation
capabilities.

Some of the changes in Loris 1.5.3 are incompatible with older Loris
versions, and may require changes to existing program code.

Loris can be downloaded from http://sourceforge.net/projects/loris

For more information about Loris, contact the developers at
loris@cersloundgroup.org, or visit them at
http://www.cerlsoundgroup.org/Loris

Please send bug reports to loris@cerlsoundgroup.org

Loris is free software. Please see the file COPYING for details.

Loris is Copyright (c) 1999-2009 by Kelly Fitz and Lippold Haken.


History of visible changes, organized by relase number:

-------------------------------------------------------
changes since 1.5.2 release:

- Analyzer can have time-varying frequency resolution
specified by an Envelope.

- Replaced Fundamental class with a pair of classes for
estimating fundamental frequency, FundamentalFromSamples
performs reassigned spectral analysis and estimates the
fundamental from the spectral peaks, and FundamentalFromPartials
estimates the fundamental from the frequency and amplitude
envelopes of a collection of Partials.

- Added Fundamental classes to scripting (Python) interface.

- Look for Csound5 headers at config time, and prefer to
build Csound5 opcode library, fall back to Csound4. 

- Added Visual Studio 2008 projects for building the simple
morphing test and the Python module under windows.

-------------------------------------------------------
changes since 1.5.1 release:

- Analyzer always constructs amplitude and fundamental
frequency envelopes during analysis (cannot disable).

- fixed broken SpcFile::addPartial members in Python 
interface.
