@@ -17,7 +17,8 @@ AC_SUBST(ac_aux_dir)
 AM_INIT_AUTOMAKE(1.6)
 AM_CONFIG_HEADER(config.h)
 
-LT_INIT
+dnl LT_INIT
+dnl LT_INIT doesn't seem to work?
 AC_SUBST([LIBTOOL_DEPS])
 
 dnl----------------------------------------------------------------
@@ -36,7 +37,7 @@ dnl each release!!!!!
 LORIS_MAJOR_VERSION=1
 LORIS_MINOR_VERSION=5
 LORIS_SUBMINOR_VERSION=3
-LORIS_PRERELEASE_STR=""
+LORIS_PRERELEASE_STR="beta2"
 LORIS_VERSION_STR="$PACKAGE_STRING$LORIS_PRERELEASE_STR"
 AC_SUBST(LORIS_MAJOR_VERSION)
 AC_SUBST(LORIS_MINOR_VERSION)
